revamping cart css, fixed 404 issues with session, made short version of text content in cart, added blog-single design

--- a/views/About.ejs
+++ b/views/About.ejs
@@ -128,7 +128,7 @@
                       <div class="blog-overlay-wrapper">
                         <img class="blog-img" src="https://images-na.ssl-images-amazon.com/images/I/61fjVsjuuVL._SL1500_.jpg">
                         <div class="blog-overlay">
-                          <p class="blog-content"><%= locals.blogs[index].shortcontent %>...</p>
+                          <p><%= locals.blogs[index].shortcontent %>...</p>
                           <form action="/Blog/<%= locals.blogs[index]._id %>"><button class="blog-btn">Lire plus</button></form>
                         </div>
                       </div>
