--- a/public/style.css
+++ b/public/style.css
@@ -518,33 +518,44 @@ div.carousel-item.active {border: 0px!important;}
 .blog-author {color: var(--color-shade-1);}
 .blog-info {}
 .blog-date {}
-.blog-content {}
-.blog-title {}
 
 .blog-form {
   max-width: 800px;
   transform: translate(-50%, 0%);
 }
 
-.blog-textarea {
-  width: 100%;
-  min-height: 100px;
-  padding: 15px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 0px 3px 0px rgba(13, 143, 255, 0.75)
+/* SINGLE BLOG */
+.container-single {
+  position: sticky;
+  min-height: unset;
 }
 
-/* SINGLE BLOG */
-.single-blog {
-  background: var(--white-shade-2);
-  padding: 40px 40px;
-  border-radius: 10px;
-  border: 1px solid var(--color-shade-2);
-  box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+.container .blog-row {
+  position: relative;
+  box-shadow: none;
+}
+
+.container .blog-row:before {
+  box-shadow: 0px 0px 2px 0px rgba(165, 165, 165, 0.75);
+  content: '';
+  position: absolute;
+  top: -15px;
+  left: -15px;
+  right: -15px;
+  bottom: -15px;
+  background: linear-gradient(135deg, rgba(19, 176, 223, 0.26) 0%, rgba(19, 176, 223, 0.26) 23%,rgba(16, 160, 197, 0.26) 23%, rgba(16, 160, 197, 0.26) 65%,rgba(13, 144, 172, 0.26) 65%, rgba(13, 144, 172, 0.26) 70%,rgba(9, 129, 146, 0.26) 70%, rgba(9, 129, 146, 0.26) 74%,rgba(6, 113, 121, 0.26) 74%, rgba(6, 113, 121, 0.26) 90%,rgba(3, 97, 95, 0.26) 90%, rgba(3, 97, 95, 0.26) 100%),linear-gradient(45deg, rgba(65, 234, 230, 0.26) 0%, rgba(65, 234, 230, 0.26) 28%,rgba(88, 192, 215, 0.26) 28%, rgba(88, 192, 215, 0.26) 55%,rgba(110, 150, 201, 0.26) 55%, rgba(110, 150, 201, 0.26) 66%,rgba(133, 107, 186, 0.26) 66%, rgba(133, 107, 186, 0.26) 80%,rgba(155, 65, 172, 0.26) 80%, rgba(155, 65, 172, 0.26) 85%,rgba(178, 23, 157, 0.26) 85%, rgba(178, 23, 157, 0.26) 100%),linear-gradient(90deg, rgb(27, 194, 246) 0%, rgb(27, 194, 246) 6%,rgb(39, 174, 237) 6%, rgb(39, 174, 237) 32%,rgb(50, 155, 229) 32%, rgb(50, 155, 229) 40%,rgb(62, 135, 220) 40%, rgb(62, 135, 220) 66%,rgb(74, 116, 211) 66%, rgb(74, 116, 211) 72%,rgb(86, 96, 202) 72%, rgb(86, 96, 202) 86%,rgb(97, 77, 194) 86%, rgb(97, 77, 194) 96%,rgb(109, 57, 185) 96%, rgb(109, 57, 185) 100%);
+  transform: skew(1deg, 1deg);
+  z-index: -1;
+}
+
+.blog-content {
+  background-color: var(--white-shade-1);
+  box-shadow: 2px 2px 5px 0 #0000006e, -2px -2px 5px 0 #ffffff87;
+  padding: 5% 10%;
+}
+
+.single-blog-img {
+  box-shadow: 3px 3px 5px 0px rgba(165, 165, 165, 0.75), -3px -3px 5px 0px rgba(255, 255, 255, 0.79);
 }
 /* END SINGLE */
 /* END BLOG */
@@ -661,6 +672,31 @@ a.lightbox-close {
 
 
 /* CART */
+.panel-heading {
+  border-top: 1px solid var(--color-shade-3);
+  padding-top: 15px;
+}
+
+#total-price-span {font-weight: bold;}
+#total-qty-span {font-weight: bold;}
+.btn-purchase {
+  color:  var(--white-shade-1);
+  background: transparent;
+  border: 1px solid var(--white-shade-1);
+  font-weight: bold;
+}
+
+#alertEmpty {
+  font-size: 5em;
+  text-align: center;
+  color: var(--color-shade-3);
+}
+
+.payment-div {
+  background: var(--color-shade-3);
+  color: var(--white-shade-1);
+}
+
 .container-cart {
   background: var(--white-shade-2);
   padding: 40px 40px;
@@ -871,7 +907,7 @@ a.lightbox-close {
 
 .date-grid {
   font-style: italic;
-  color: var(--color-shade-2)
+  color: var(--color-shade-2);
 }
 .status-grid {}
 .price-grid {font-weight: bold;}
@@ -1007,6 +1043,7 @@ td a {
 }
 
 .blog-row {
+  background: #f1f1f1;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -1049,7 +1086,6 @@ td a {
 .blog-author {color: var(--color-shade-1);}
 .blog-info {font-style: italic; color: lightgrey; margin-bottom: 0;}
 .blog-date {}
-.blog-content {}
 
 .blog-img {
   width: 100%;
@@ -1251,24 +1287,6 @@ button:focus {outline: none;}
   background-color: rgb(75, 96, 174);
   border-left: 1px solid rgb(13, 31, 68);
 }
-
-/*
-.lostpw-section .box {
-  position: relative;
-  background-color: rgb(75, 96, 174);
-}
-
-.lostpw-section .box:before {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  background: linear-gradient(135deg, rgba(19, 176, 223, 0.26) 0%, rgba(19, 176, 223, 0.26) 23%,rgba(16, 160, 197, 0.26) 23%, rgba(16, 160, 197, 0.26) 65%,rgba(13, 144, 172, 0.26) 65%, rgba(13, 144, 172, 0.26) 70%,rgba(9, 129, 146, 0.26) 70%, rgba(9, 129, 146, 0.26) 74%,rgba(6, 113, 121, 0.26) 74%, rgba(6, 113, 121, 0.26) 90%,rgba(3, 97, 95, 0.26) 90%, rgba(3, 97, 95, 0.26) 100%),linear-gradient(45deg, rgba(65, 234, 230, 0.26) 0%, rgba(65, 234, 230, 0.26) 28%,rgba(88, 192, 215, 0.26) 28%, rgba(88, 192, 215, 0.26) 55%,rgba(110, 150, 201, 0.26) 55%, rgba(110, 150, 201, 0.26) 66%,rgba(133, 107, 186, 0.26) 66%, rgba(133, 107, 186, 0.26) 80%,rgba(155, 65, 172, 0.26) 80%, rgba(155, 65, 172, 0.26) 85%,rgba(178, 23, 157, 0.26) 85%, rgba(178, 23, 157, 0.26) 100%),linear-gradient(90deg, rgb(27, 194, 246) 0%, rgb(27, 194, 246) 6%,rgb(39, 174, 237) 6%, rgb(39, 174, 237) 32%,rgb(50, 155, 229) 32%, rgb(50, 155, 229) 40%,rgb(62, 135, 220) 40%, rgb(62, 135, 220) 66%,rgb(74, 116, 211) 66%, rgb(74, 116, 211) 72%,rgb(86, 96, 202) 72%, rgb(86, 96, 202) 86%,rgb(97, 77, 194) 86%, rgb(97, 77, 194) 96%,rgb(109, 57, 185) 96%, rgb(109, 57, 185) 100%);
-  transform: skew(1deg, 1deg);
-  z-index: -1;
-}*/
 
 .lostpw-section {margin-top: 10%;}
 .lostpw-section .section-heading h2 {color: var(--white-shade-1);}
