--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -1,8 +1,8 @@
 <% include ../partials/head %>
 
 <script src="/scripts/order.js"></script>
-<div class="container"> 
-    <div class="container-cart">
+<div class="container container-single"> 
+  <div class="blog-row">
         <h1>ORDER MANAGE</h1>
         <% if (locals.order) { %>
             <h1>order</h1>
