--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/head %>
 
-<div class="container"> 
-    <div class="container-cart">
+<div class="container container-single"> 
+  <div class="blog-row">
         <h1>THANKS FOR YOUR PURCHASE</h1>
         <% if (locals.order) { %>
             <h1>order</h1>
