--- a/public/style.css
+++ b/public/style.css
@@ -653,7 +653,7 @@ a.lightbox-close {
 /* END PATCH POST */
 
 /* SINGLE */
-.single-gallery {}
+
 /* END SINGLE */
 /* END GALLERY */
 
@@ -723,14 +723,14 @@ a.lightbox-close {
   color: var(--black-shade-2);
 }
 
-.cart-item {width: 45%;}
+.cart-item {width: 60%;}
 .cart-price {
-  width: 20%;
+  width: 25%;
   font-size: 1.2em;
   color: var(--black-shade-2);
 }
 
-.cart-quantity {width: 35%;}
+.cart-quantity {width: 15%;}
 .cart-img {width: 150px;}
 .cart-title-description {margin-left: 10px;}
 
@@ -744,6 +744,7 @@ a.lightbox-close {
 .qty-increase {}
 .qty-decrease {}
 .cart-item-title {border-bottom: 1px solid var(--black-shade-1);}
+.cart-item-qty {width: 100%;}
 /* END CART */
 
 /* Extra small devices (portrait phones, less than 576px)
@@ -1298,3 +1299,18 @@ button:focus {outline: none;}
   height: 75%;
   box-shadow: 1px 1px 5px 0px rgba(165, 165, 165, 0.75), -1px -1px 5px 0px rgba(255, 255, 255, 0.79);
 }
+
+
+
+/* SINGLE SHOP */
+.carousel-img {
+  height: 100%!important;
+  max-height: 75vh;
+}
+/* END SINGLE SHOP */
+
+
+
+/* ORDER RECAP */
+
+/* END ORDER RECAP */
