--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -2,6 +2,61 @@
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
+
+<div class="container container-single"> 
+  <div class="blog-row">
+  <% if (locals.galleries){ %>
+      <div class="col-10 offset-1" id="<%= locals.galleries._id %>">
+          <h3 class="blog-title col-12"><%= locals.galleries.title %></h3>  
+          <% if (locals.level && locals.level > 1) { %>
+            <a href="/Admin/Blog/Patch/<%= locals.galleries._id %>"><i class="fas fa-edit"></i></a>
+          <% } %> 
+
+          <div class="carousel-container">
+              <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
+                  <div class="carousel-inner" role="listbox">
+                      <% if (locals.img) { %>
+                          <% locals.img.forEach(function (item, index) { %>
+                              <div class="carousel-item <% if(index == 0) { %>active<% } %>">
+                                  <a href="#expand"><img onclick="expand(this);" class="d-block w-100 carousel-img" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                                  <div class="carousel-caption d-none d-md-block">
+                                  </div>
+                              </div>
+                          <% }) %>
+                      <% } %>
+                </div>       
+                  <!--Controls-->
+                  <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+                      <span><i class="fas fa-chevron-left fa-4x"></i></span>
+                      <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+                      <span><i class="fas fa-chevron-right fa-4x"></i></span>
+                      <span class="sr-only">Next</span>
+                  </a>
+                  <!--/.Controls-->
+              </div>
+          </div>
+          <div class="thumbnail-wrapper">
+              <ol class="carousel-indicators">
+                  <% if (locals.img) { %>
+                      <% locals.img.forEach(function (item, index) { %>
+                          <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
+                              <img class="d-block w-100" src="http://localhost:8089/api/image/<%= item._id %>" alt="..." class="img-fluid">
+                          </li>
+                      <% }) %>
+                  <% } %>
+              </ol>
+          </div>
+
+          <p class="blog-content col-10 offset-1 mt-2"><%= locals.galleries.content %></p>
+      </div>
+  <% } %>
+</div>
+</div>
+
+
+<!--
 <div class="container">
   <div id="single-gallery">
     <% if (locals.galleries){ %>
@@ -30,7 +85,7 @@
     <% } %>
   </div>
 </div>
-
+-->
 <script src="/scripts/gallery/galleryScripts.js"></script>
 <script src="/scripts/frontValidation.js"></script>
 <script src="/scripts/formFocus.js"></script>
