--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -34,24 +34,24 @@
       <% } %>
 
       <div class="panel-heading">
-        <h2 class="panel-title">Delivery Informations</h2>
+        <h2 class="panel-title">Informations pour la livraison</h2>
         <h6>Nous utiliserons ces informations pour livrer vos commandes, cliquez <a href="/User">ici</a> pour modifier ces informations</h6>
       </div>
       <div class="panel panel-primary">
         <div class="row">
           <div class="col-md-6">
-            <label class="control-label">Last Name</label>
+            <label class="control-label">Nom</label>
             <input class="form-control" id="lastname" name="lastname" placeholder="Doe" value="<% if (locals.order.lastname) { %><%= locals.order.lastname %><% } %>" readonly>
             <span id="i_lastname" class="form-info">Last Name must contain between 2 and 128 characters</span>
           </div>
           <div class="col-md-6">
-            <label class="control-label">First Name</label>
+            <label class="control-label">Prénom</label>
             <input class="form-control" id="firstname" name="firstname" placeholder="John" value="<% if (locals.order.firstname) { %><%= locals.order.firstname %><% } %>" readonly>
             <span id="i_firstname" class="form-info">First Name must contain between 2 and 128 characters</span>
           </div>
         </div>
         <div class="panel-body">
-          <label class="control-label">Address</label>        
+          <label class="control-label">Adresse</label>        
           <input id="autocomplete" name="fulltext_address" placeholder="Enter your address" class="form-control" value="<% if (locals.order.full_address) { %><%= locals.order.full_address %><% } %>" readonly>
           <div id="address">
             <div class="row">
@@ -62,21 +62,21 @@
             </div>
             <div class="row">
               <div class="col-md-6">
-                <label class="control-label">City</label>
+                <label class="control-label">Ville</label>
                 <input class="form-control field" id="locality" name="city" placeholder="Paris" value="<% if (locals.order.city) { %><%= locals.order.city %><% } %>" readonly>
               </div>
               <div class="col-md-6"> 
-                <label class="control-label">State</label>
+                <label class="control-label">Département</label>
                 <input class="form-control" id="administrative_area_level_1" name="state" placeholder="Île-de-France" value="<% if (locals.order.state) { %><%= locals.order.state %><% } %>" readonly>
               </div>
             </div>
             <div class="row">
               <div class="col-md-6">
-                <label class="control-label">Zip code</label>
+                <label class="control-label">Code Postal</label>
                 <input class="form-control" id="postal_code" name="postal_code" placeholder="75001" value="<% if (locals.order.zipcode) { %><%= locals.order.zipcode %><% } %>" readonly>
               </div>
               <div class="col-md-6">
-                <label class="control-label">Country</label>
+                <label class="control-label">Pays</label>
                 <input class="form-control" id="country" name="country" placeholder="France" value="<% if (locals.order.country) { %><%= locals.order.country %><% } %>" readonly>
               </div>
             </div>
@@ -85,7 +85,7 @@
                 <textarea id="instructions" class="instructions-textarea" name="instructions" placeholder="Door code or other useful informations..." readonly><% if (locals.order.instructions) { %><%= locals.order.instructions %><% } %></textarea>
               </div>
             </div>
-
+  
           </div>
         </div>
       </div>
