--- a/views/Galerie.ejs
+++ b/views/Galerie.ejs
@@ -3,28 +3,33 @@
 <script src="/scripts/gallery/infiniteGalleries.js"></script>
 <script src="/scripts/cart.js"></script>
 <div class="container">
-    <div class="container-gallery" id="container-gallery">
-          <% if(locals.galleries){ %>
-            <% Object.keys(locals.galleries).forEach(function (index) { %>
-              <div class="card" id="<%= locals.galleries[index]._id %>">
-                <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="card-img-top" alt="<%= locals.galleries[index].title %>"></a>
-                <div class="card-body">
-                  <h5 class="card-title"><i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].title %></a></i></h5>
-                  <p class="card-text gallery-description"><%= locals.galleries[index].content %></p>
-                  <p class="card-text">
-                    <% locals.galleries[index].tags.forEach(function (tag) { %>
-                      <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
-                    <% }) %>
-                  </p>
-                </div>
-              </div>
-            <% }) %>
-          <% } %>
-    </div>
-    <div class="col-6 offset-3 mb-3 mt-3">
-      <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
-      <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleries();">
-    </div>
+  <div class="container-gallery" id="container-gallery">
+    <% if(locals.galleries){ %>
+      <% Object.keys(locals.galleries).forEach(function (index) { %>
+        <div class="expandable-card" id="<%= locals.galleries[index]._id %>">
+          <div class="face face1">
+            <a href="#expand">
+              <img onclick="expand(this);" src="/api/image/<%= locals.galleries[index].mainImgId %>" class="card-img-top" alt="<%= locals.galleries[index].title %>">
+            </a>
+          </div>
+          <div class="face face2">
+            <h5 class="card-title"><i><a href="/Galerie/<%= locals.galleries[index]._id %>"><%= locals.galleries[index].shorttitle %></a></i></h5>
+            <p class="gallery-description"><%= locals.galleries[index].shortcontent %>...</p>
+            <div class="gallery-tags">
+              <% locals.galleries[index].tags.forEach(function (tag) { %>
+                <a href="/Galerie/Tags?t=<%= tag %>">#<%= tag %></a>
+              <% }) %>
+            </div>
+            <form action="/Galerie/<%= locals.galleries[index]._id %>"><button class="blog-btn">Lire plus</button></form>
+          </div>
+        </div>
+      <% }) %>
+    <% } %>
+  </div>
+  <div class="col-6 offset-3 mb-3 mt-3">
+    <img id="loader" src="/img/loader.gif" style="width: 50px; height: 50px; margin: 5px auto 5px auto; display: none">
+    <input type="submit" class="logbtn" value="Load more" onclick="infiniteGalleries();">
+  </div>
 </div>
 
 <script src="/scripts/gallery/galleryScripts.js"></script>
